--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "chromadb==0.5.3",
     "decorator==4.4.2",
     "faiss-cpu==1.8.0.post1",
     "gitpython==3.1.43",
     "langchain-anthropic==0.2.0",
     "langchain-chroma>=0.1.4",
+    "langchain-cohere==0.3.0",
     "langchain-community==0.3.0",
     "langchain-core==0.3.0",
     "langchain-openai==0.2.0",
@@ -20,7 +20,9 @@ dependencies = [
     "numpy==1.26.4",
     "pydantic==2.10.6",
     "python-dotenv==1.0.1",
+    "posthog>=2.4.0,<6.0.0",
     "ragas==0.1.14",
+    "rank-bm25==0.2.2",
     "retry==0.9.2",
     "tavily-python==0.5.0",
 ]
