--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
     "python.terminal.activateEnvironment": true,
     "python.envFile": "${workspaceFolder}/.env",
+    "python.analysis.exclude": ["./repo"],
     "python.testing.pytestArgs": [ "tests","--cov", "--cov-branch", "-v"],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
